<resources>
    <string name="app_name">My Application by Surya</string>
    <string name="msg">Enter a message</string>
    <string name="send">Send</string>
    <string name="voice">Voice Input</string>
    <string name="confirm">Confirm</string>
    <string name="contact">Enter a phone number or an email address</string>
    <string name="msg_subject">Message from Surya</string>
    <string name="phone_share">Sending SMS …</string>
    <string name="mail_share">Sending email …</string>
    <string name="contact_error">"Enter a valid phone number or email address"</string>
    <string name="no_mail_app">There are no email clients installed.</string>
    <string name="no_chat_app">There are no text send apps installed.</string>
    <string name="empty_msg">Please enter a message</string>


    <string name="test_msg">Hello World</string>
</resources>